--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donat Maryam</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="menus.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -19,12 +19,12 @@
             <a href="#" class="logo"><img src="logo.png" width="90px"></a>
             <h2>Donat Maryam</h2>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Menu</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
                 <li><a href="#">Recomend</a></li>
                 <li><a href="wa.me/+6289612631577">Contact</a></li>
             </ul>
-            <a href="#"><img src="cart.png" width="80px"></a>
+            <a href="#"><img src="cart (1).png" width="80px"></a>
         </header>
         <div class="content">
             <div class="menu">
