--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="#">Recomend</a></li>
-                <li><a href="wa.me/6289612631577"><img src="wa.jpg-removebg-preview.png" width="40px"></a></li>
+                <li><a href="https://api.whatsapp.com/send/?phone=6289612631577&text&type=phone_number&app_absent=0"><img src="wa.jpg-removebg-preview.png" width="40px"></a></li>
                 <li><a href="#"><img src="cart-removebg-preview.png" width="40px"></a></li>
             </ul>
         </header>
