--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="https://api.whatsapp.com/send/?phone=6289612631577&text&type=phone_number&app_absent=0">Contact</a></li>
+                <li><a href="#">Recomend</a></li>
+                <li><a href="wa.me/+6289612631577">Contact</a></li>
             </ul>
             <a href="#"><img src="cart (1).png" width="80px"></a>
         </header>
